Archive2/6c/9d66766e1dd4fe/output
main.cpp:23:1: error: typename specifier refers to non-type member 'map' in 'neg_f<pred>'
using neg = typename neg_f<F>::map;
^~~~~
main.cpp:27:9: note: in instantiation of template type alias 'neg' requested here
    fun<neg<pred> >{};
        ^
main.cpp:13:5: note: referenced member 'map' is declared here
    using map = _not <F <T>{}>;
    ^
1 error generated.
